# saltPAPER

./: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  requirements.txt
components/helper/: textwindow.py
components/services/: input.py
engine/debug/: textwindow.py
engine/helper/: textwindow.py
engine/map/: tilemap.py  view.py
engine/services/: display.py  input.py  layer.py
saltpaper/: __init__.py
saltpaper/functions/: __init__.py  spawn.py  sprite_generators.py  text.py  vectortools.py
saltpaper/services/: __init__.py  assetservice.py  displayservice.py  event.py  inputservice.py  layer.py  renderservice.py  stateservice.py
saltpaper/worldsystem/: __init__.py
saltpaper/worldsystem/components/: __init__.py  clickable.py  position.py  sprite.py
