[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "saltpaper"
version = "0.0.1"
dependencies = [
    "pygame-ce>=2.4.0",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["saltpaper*"]

[tool.setuptools]
include-package-data = true
